--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
-    "firebase": "^12.0.0",
+    "firebase": "12.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
