Add interactive map with mosque markers and location
Introduced a new InteractiveMap component using react-native-maps and expo-location, displaying user location and mosque markers with controls and legend. Updated the map home screen to use this component. Enhanced mosqueSlice with more mock mosques and adjusted fetchNearbyMosques to return all for better map display. Updated app configuration and permissions for location support on iOS and Android. Added required dependencies for maps and location.

--- a/app.json
+++ b/app.json
@@ -9,13 +9,18 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app uses location to show nearby mosques and provide prayer times for your area.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "This app uses location to show nearby mosques and provide prayer times for your area."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": ["ACCESS_FINE_LOCATION", "ACCESS_COARSE_LOCATION"]
     },
     "web": {
       "bundler": "metro",
@@ -31,6 +36,12 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow SalatTrails to use your location to show nearby mosques and provide accurate prayer times."
         }
       ]
     ],
