--- a/env.example
+++ b/env.example
@@ -7,4 +7,9 @@ FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
 FIREBASE_PROJECT_ID=your-project-id
 FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
 FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
-FIREBASE_APP_ID=your-app-id 
+FIREBASE_APP_ID=your-app-id
+
+# Google Maps Configuration
+# Get your API key from Google Cloud Console
+# Enable Maps SDK for iOS and Android
+GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here 
