Add Expo Updates integration and update settings
Integrated expo-updates for OTA updates, including configuration in app.config.js and app.json, and added the expo-updates plugin. Introduced a new useUpdates hook to handle update checks and prompts, invoked on app start and from a new 'Check for Updates' option in the settings screen. Updated dependencies and version numbers to support the new update functionality.

--- a/app.json
+++ b/app.json
@@ -8,6 +8,12 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/34c1df8e-fff0-40dd-9de0-832ebf004400"
+    },
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
@@ -29,6 +35,7 @@
     },
     "plugins": [
       "expo-router",
+      "expo-updates",
       [
         "expo-splash-screen",
         {
