--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "update": "node scripts/publish-update.js",
+    "update:preview": "node scripts/publish-update.js preview",
+    "update:development": "node scripts/publish-update.js development"
   },
   "jest": {
     "preset": "jest-expo"
@@ -36,6 +39,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
+    "expo-updates": "^0.28.17",
     "firebase": "12.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
