Add build number/versioning and env file support
Added .env to .gitignore to prevent committing environment variables. Set iOS buildNumber and Android versionCode in app.config.js. Updated eas.json to enable remote app version source and auto-increment for production builds. Added npm scripts for bumping build numbers.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "expo lint",
     "update": "node scripts/publish-update.js",
     "update:preview": "node scripts/publish-update.js preview",
-    "update:development": "node scripts/publish-update.js development"
+    "update:development": "node scripts/publish-update.js development",
+    "bump-build": "node scripts/update-build-numbers.js",
+    "bump-build:ios": "node scripts/update-build-numbers.js",
+    "bump-build:android": "node scripts/update-build-numbers.js"
   },
   "jest": {
     "preset": "jest-expo"
